server-run.log
📹 Loading video catalog from MULTIPLE sources...
✅ Loaded 687 videos from Langfeed
✅ Loaded 138 videos from public/videos/reels/
🎬 TOTAL: 825 videos loaded
🎯 Spanish Frequency Database loaded - 10K+ words organized by CEFR bands
🎯 Spanish Frequency System loaded - TOP 20 words with viral contexts!
🔥 Spanish Gossip Feed loaded - 8 celebrity drama items ready!
🎯 Spanish Frequency Database loaded - 10K+ words organized by CEFR bands
🔥 Smart Feed System initialized with frequency targeting
🧠 Personalized SRS Feed System initialized
✅ VideoDifficultyScorer initialized with 10k Spanish words
/Users/mindful/_projects/workspace3/lib/translation-service-fast.js:136
            } else {
              ^^^^

SyntaxError: Unexpected token 'else'
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1487:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/mindful/_projects/workspace3/lib/articles-feed-api.js:18:28)

Node.js v22.17.1
